--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 
 <script type="text/javascript" src="assets/js/modules.js"></script>
+<script type="text/javascript" src="assets/js/services.js"></script>
 <script type="text/javascript" src="assets/js/controllers.js"></script>
 
 <script type="text/javascript" src="assets/js/scripts.js"></script>
